<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grrr</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="grievancelist_addgrievance">Your misery defies these constraints? Add a grievance.</string>
    <string name="grievancelist_addgrievance_button">add a grievance</string>
    <string name="grievancelist_questionmark">\?</string>
    <string name="grievancelist_title">These are your grievances; behold your suffering</string>

    <string name="grievancetype_listitem_createdate">Create Date: </string>
    <string name="grievancetype_listitem_log">Log It</string>

    <string name="dialog_addgrievancetype_name">Description: </string>
    <string name="dialog_addgrievancetype_tags">Add Tags (Optional)</string>
    <string name="dialog_addgrievancetype_confirmbutton">Confirm</string>
    <string name="dialog_addgrievancetype_cancelbutton">Cancel</string>

    <string name="dialog_addgrievancetoken_added">Grievance logged!</string>
    <string name="undo">Undo</string>
    <string name="done">Done!</string>
    <string name="magnitude">How bad is it?</string>
    <string name="set_magnitude_toast">Tell me how bad it is to log it!</string>

</resources>
