<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/grievance_list_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/grievancelist_title"/>

    <ListView
        android:id="@+id/grievance_list_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        />

    <RelativeLayout
        android:id="@+id/grievance_list_add_grievance_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/grievance_list_add_grievance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/grievancelist_addgrievance"
            android:gravity="center" />

        <Button
            android:id="@+id/grievance_list_add_grievance_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grievance_list_add_grievance_title"
            android:layout_alignParentLeft="true"
            android:text="@string/grievancelist_addgrievance_button"/>

        <Button
            android:id="@+id/grievance_list_whatsthis_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/grievance_list_add_grievance_title"
            android:layout_toRightOf="@+id/grievance_list_add_grievance_button"
            android:text="@string/grievancelist_questionmark"/>



    </RelativeLayout>

</LinearLayout>